# PhonetAI

./: .gitignore  Dockerfile  Makefile  README.md  admin.py  app.py  celery_settings.py  config.py  database.py  docker-compose.yaml  models.py  pyproject.toml  redis_config.py  requirements.txt
api/: admin.py
api/auth/: auth.py
api/openai/: decorators.py  placeholders.py  trancription.py
api/webhook/: router.py  schemas.py
api/webhook/functions/: database_orm.py  dataclasses.py  source.py
migrations/: env.py
migrations/versions/: 174fb45a580a_.py  318ddc28e22a_initial_migration_test.py  54f94b063e93_migrations.py  9351dc9dc799_initial_migration.py  b2446d089768_add_lead_status.py  f2c17d7d6414_.py
templates/admin/: login.html  logout.html
